docs: normalize skill contract as English-first with Chinese reference